Entidad de student estable
